--- a/TheProyecto/Views/Home/About.cshtml
+++ b/TheProyecto/Views/Home/About.cshtml
@@ -4,4 +4,4 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>First test of making a page.</p>
