--- a/TheProyecto/Views/Producto/Index.cshtml
+++ b/TheProyecto/Views/Producto/Index.cshtml
@@ -15,7 +15,7 @@
             @Html.DisplayNameFor(model => model.nombre)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.percio_unitario)
+            Precio Unitario
         </th>
         <th>
             @Html.DisplayNameFor(model => model.descripcion)
@@ -24,7 +24,7 @@
             @Html.DisplayNameFor(model => model.cantidad)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.id_proveedor)
+            Proveedor
         </th>
         <th></th>
     </tr>
@@ -44,7 +44,7 @@
             @Html.DisplayFor(modelItem => item.cantidad)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.id_proveedor)
+            @TheProyecto.Controllers.ProductoController.NombreProveedor(item.id_proveedor)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.id }) |
