--- a/TheProyecto/Views/Proveedor/Index.cshtml
+++ b/TheProyecto/Views/Proveedor/Index.cshtml
@@ -21,7 +21,7 @@
             @Html.DisplayNameFor(model => model.telefono)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.nombre_contacto)
+            Nombre de Contacto
         </th>
         <th></th>
     </tr>
