CRUD Producto (tweeks)

--- a/TheProyecto/Views/Producto/Details.cshtml
+++ b/TheProyecto/Views/Producto/Details.cshtml
@@ -47,7 +47,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.id_proveedor)
+            @TheProyecto.Controllers.ProductoController.NombreProveedor(Model.id_proveedor)
         </dd>
 
     </dl>
