--- a/TheProyecto/Views/Compra/Index.cshtml
+++ b/TheProyecto/Views/Compra/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<TheProyecto.Models.producto_compra>
+﻿@model IEnumerable<TheProyecto.Models.compra>
 
 @{
     ViewBag.Title = "Index";
@@ -12,13 +12,16 @@
 <table class="table">
     <tr>
         <th>
-            Compra
+            @Html.DisplayNameFor(model => model.fecha)
         </th>
         <th>
-            Producto
+            @Html.DisplayNameFor(model => model.total)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.cantidad)
+            Usuario
+        </th>
+        <th>
+            Cliente
         </th>
         <th></th>
     </tr>
@@ -27,13 +30,16 @@
     {
         <tr>
             <td>
-                @TheProyecto.Controllers.ProductoCompraController.NombreCompra(item.id_compra)
+                @Html.DisplayFor(modelItem => item.fecha)
             </td>
             <td>
-                @TheProyecto.Controllers.ProductoCompraController.NombreProducto(item.id_producto)
+                @Html.DisplayFor(modelItem => item.total)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.cantidad)
+                @TheProyecto.Controllers.CompraController.NombreUsuario(item.id_usuario)
+            </td>
+            <td>
+                @TheProyecto.Controllers.CompraController.NombreCliente(item.id_cliente)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
@@ -51,6 +57,6 @@
             if(!confirm("Estas seguro de eliminar?" + "Esta opcion no se puede deshacer")){
             event.preventDefault();
         }
-        })
+            })
     </script>
 }
