--- a/TheProyecto/Views/Compra/ListaUsuario.cshtml
+++ b/TheProyecto/Views/Compra/ListaUsuario.cshtml
@@ -1,9 +1,10 @@
 ﻿@model IEnumerable<TheProyecto.Models.usuario>
 
-<select class="form-control" id="idUsuario" name="idUsuario">
+<select class="form-control" id="id_usuario" name="id_usuario">
     @foreach (var item in Model)
     {
         <option value="@item.id">@item.nombre</option>
     }
 
 </select>
+        
