--- a/TheProyecto/Views/Shared/_Layout.cshtml
+++ b/TheProyecto/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Nombre de la aplicación", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("ElCoon", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -26,15 +26,24 @@
                     <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-                            Opciones <span class="caret"></span>
+                            Opciones no foraneos <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
                             <li>@Html.ActionLink("Usuario Crud", "Index", "User")</li>
-                            <li>@Html.ActionLink("Producto Crud", "Index", "Producto")</li>
-                            <li>@Html.ActionLink("Proveedor Crud", "Index", "Proveedor")</li>
-                            <li>@Html.ActionLink("UsuarioRol Crud", "Index", "UsuarioRol")</li>
-                            <li>@Html.ActionLink("Roles Crud", "Index", "Roles")</li>
                             <li>@Html.ActionLink("Clientes Crud", "Index", "Cliente")</li>
+                            <li>@Html.ActionLink("Proveedor Crud", "Index", "Proveedor")</li>
+                            <li>@Html.ActionLink("Roles Crud", "Index", "Roles")</li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                            Opciones foraneos <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li>@Html.ActionLink("Producto Crud", "Index", "Producto")</li>
+                            <li>@Html.ActionLink("UsuarioRol Crud", "Index", "UsuarioRol")</li>
+                            <li>@Html.ActionLink("Producto Compra Crud", "Index", "ProductoCompra")</li>
+                            <li>@Html.ActionLink("Compra Crud", "Index", "Compra")</li>
                         </ul>
                     </li>
                 </ul>
@@ -45,7 +54,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Mi aplicación ASP.NET</p>
+            <p>&copy; @DateTime.Now.Year - Derechos reservados (NonCloud)</p>
         </footer>
     </div>
 
