--- a/TheProyecto/Views/UsuarioRol/Edit.cshtml
+++ b/TheProyecto/Views/UsuarioRol/Edit.cshtml
@@ -19,7 +19,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.idUsuario, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.idUsuario, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.Action("ListaUsuario")
                 @Html.ValidationMessageFor(model => model.idUsuario, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -27,7 +27,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.idRol, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.idRol, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.Action("ListaRoles")
                 @Html.ValidationMessageFor(model => model.idRol, "", new { @class = "text-danger" })
             </div>
         </div>
