--- a/TheProyecto/Views/UsuarioRol/ListaRoles.cshtml
+++ b/TheProyecto/Views/UsuarioRol/ListaRoles.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<TheProyecto.Models.roles>
 
-<select class="form-control" id="id_rol" name="id_rol">
+<select class="form-control" id="idRol" name="idRol">
     @foreach (var item in Model)
     {
         <option value="@item.id">@item.descripcion</option>
