Finalizacion CRUDs 2 (Imagen Producto)

--- a/TheProyecto/Views/Shared/_Layout.cshtml
+++ b/TheProyecto/Views/Shared/_Layout.cshtml
@@ -44,6 +44,7 @@
                             <li>@Html.ActionLink("UsuarioRol Crud", "Index", "UsuarioRol")</li>
                             <li>@Html.ActionLink("Producto Compra Crud", "Index", "ProductoCompra")</li>
                             <li>@Html.ActionLink("Compra Crud", "Index", "Compra")</li>
+                            <li>@Html.ActionLink("Producto Imagen Crud", "Index", "ProductoImagen")</li>
                         </ul>
                     </li>
                 </ul>
