Creacion Reporte + Advertencia validacion + advertencia obligatorio

--- a/TheProyecto/Views/Compra/Index.cshtml
+++ b/TheProyecto/Views/Compra/Index.cshtml
@@ -51,6 +51,10 @@
 
 </table>
 
+<div>
+    @Html.ActionLink("Ver Reporte", "Report_Cliente_Compra")
+</div>
+
 @section scripts{
     <script>
         $(".linkDelete").click(fuction(event) {
