--- a/TheProyecto/Views/Producto/Index.cshtml
+++ b/TheProyecto/Views/Producto/Index.cshtml
@@ -56,6 +56,10 @@
 
 </table>
 
+<div>
+    @Html.ActionLink("Ver Reporte", "Customizable")
+</div>
+
 @section scripts{
     <script>
         $(".linkDelete").click(fuction(event) {
