--- a/TheProyecto/Views/User/Login.cshtml
+++ b/TheProyecto/Views/User/Login.cshtml
@@ -13,7 +13,7 @@
         <div class="form-group">
             <label class="control-label col-md-2">User</label>
             <div class="col-md-10">
-                <input type="text" name="User" class="form-control" />
+                <input type="text" name="User" class="form-control" required/>
             </div>
         </div>
 
