--- a/TheProyecto/Views/Shared/_Layout.cshtml
+++ b/TheProyecto/Views/Shared/_Layout.cshtml
@@ -24,29 +24,39 @@
                     <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
                     <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
                     <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
-                    <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-                            Opciones no foraneos <span class="caret"></span>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li>@Html.ActionLink("Usuario Crud", "Index", "User")</li>
-                            <li>@Html.ActionLink("Clientes Crud", "Index", "Cliente")</li>
-                            <li>@Html.ActionLink("Proveedor Crud", "Index", "Proveedor")</li>
-                            <li>@Html.ActionLink("Roles Crud", "Index", "Roles")</li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-                            Opciones foraneos <span class="caret"></span>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li>@Html.ActionLink("Producto Crud", "Index", "Producto")</li>
-                            <li>@Html.ActionLink("UsuarioRol Crud", "Index", "UsuarioRol")</li>
-                            <li>@Html.ActionLink("Producto Compra Crud", "Index", "ProductoCompra")</li>
-                            <li>@Html.ActionLink("Compra Crud", "Index", "Compra")</li>
-                            <li>@Html.ActionLink("Producto Imagen Crud", "Index", "ProductoImagen")</li>
-                        </ul>
-                    </li>
+                    @if (User.Identity.IsAuthenticated == false)
+                    { 
+                    <li>@Html.ActionLink("Iniciar Sesion", "Login", "User")</li>
+                    }
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                                Opciones no foraneos <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li>@Html.ActionLink("Usuario Crud", "Index", "User")</li>
+                                <li>@Html.ActionLink("Clientes Crud", "Index", "Cliente")</li>
+                                <li>@Html.ActionLink("Proveedor Crud", "Index", "Proveedor")</li>
+                                <li>@Html.ActionLink("Roles Crud", "Index", "Roles")</li>
+                            </ul>
+                        </li>
+                    }
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                                Opciones foraneos <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li>@Html.ActionLink("Producto Crud", "Index", "Producto")</li>
+                                <li>@Html.ActionLink("UsuarioRol Crud", "Index", "UsuarioRol")</li>
+                                <li>@Html.ActionLink("Producto Compra Crud", "Index", "ProductoCompra")</li>
+                                <li>@Html.ActionLink("Compra Crud", "Index", "Compra")</li>
+                                <li>@Html.ActionLink("Producto Imagen Crud", "Index", "ProductoImagen")</li>
+                            </ul>
+                        </li>
+                    }
                     @if (User.Identity.IsAuthenticated)
                     {
                         <li>@Html.ActionLink("Cerrar Sesion", "CloseSession", "User")</li>
