--- a/TheProyecto/Views/Producto/Customizable.cshtml
+++ b/TheProyecto/Views/Producto/Customizable.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Customizable";
 }
 
-<h2>Customizable</h2>
+<h2>Reporte</h2>
 
 <table class="table">
     <tr>
@@ -25,3 +25,5 @@
 </tr>
             }
 </table>
+
+@Html.ActionLink("Imprimir Reporte", "PdfReport")
