Paginador + arreglos (boton CSV)

--- a/TheProyecto/Views/Proveedor/Index.cshtml
+++ b/TheProyecto/Views/Proveedor/Index.cshtml
@@ -7,7 +7,8 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Crear Nuevo", "Create")
+    @Html.ActionLink("Subir CSV", "uploadCSV")
 </p>
 <table class="table">
     <tr>
