--- a/TheProyecto/Views/Shared/_Layout.cshtml
+++ b/TheProyecto/Views/Shared/_Layout.cshtml
@@ -25,8 +25,8 @@
                     <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
                     <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
                     @if (User.Identity.IsAuthenticated == false)
-                    { 
-                    <li>@Html.ActionLink("Iniciar Sesion", "Login", "User")</li>
+                    {
+                        <li>@Html.ActionLink("Iniciar Sesion", "Login", "User")</li>
                     }
                     @if (User.Identity.IsAuthenticated)
                     {
@@ -54,6 +54,17 @@
                                 <li>@Html.ActionLink("Producto Compra Crud", "Index", "ProductoCompra")</li>
                                 <li>@Html.ActionLink("Compra Crud", "Index", "Compra")</li>
                                 <li>@Html.ActionLink("Producto Imagen Crud", "Index", "ProductoImagen")</li>
+                            </ul>
+                        </li>
+                    }
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                                Extra <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li>@Html.ActionLink("Paginador", "PaginadorIndex", "User")</li>
                             </ul>
                         </li>
                     }
