Imagen para el producto

--- a/TheProyecto/Views/Shared/_Layout.cshtml
+++ b/TheProyecto/Views/Shared/_Layout.cshtml
@@ -65,6 +65,7 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li>@Html.ActionLink("Paginador", "PaginadorIndex", "User")</li>
+                                <li>@Html.ActionLink("Cargar Imagen Producto", "CargarImagen", "ProductoImagen")</li>
                             </ul>
                         </li>
                     }
