--- a/TheProyecto/Views/Producto/Details.cshtml
+++ b/TheProyecto/Views/Producto/Details.cshtml
@@ -50,6 +50,14 @@
             @TheProyecto.Controllers.ProductoController.NombreProveedor(Model.id_proveedor)
         </dd>
 
+        <dt>
+            Imagen
+        </dt>
+
+        <dd>
+            <img src="@Url.Content("~/" + ViewBag.imagen)" alt="Image"/>
+        </dd>
+
     </dl>
 </div>
 <p>
